--- a/Clubber/.classpath
+++ b/Clubber/.classpath
@@ -12,5 +12,7 @@
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/jsse.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/commons-fileupload-1.3.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="WebContent/WEB-INF/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Git-fin3/Clubber/Clubber/WebContent/WEB-INF/lib/javaee.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/Git-fin3/Clubber/Clubber/WebContent/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
